[gd_scene load_steps=4 format=3 uid="uid://bmii8b54bsw0f"]

[ext_resource type="Script" path="res://item_inspect.gd" id="1_8ri8g"]
[ext_resource type="Texture2D" uid="uid://0tpcivmy2wha" path="res://icon_old.svg" id="2_xy6r7"]
[ext_resource type="PackedScene" uid="uid://b03n7xry3kdf8" path="res://sub_viewport.tscn" id="3_6pt8o"]

[node name="Item_inspect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ri8g")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0.529412, 0.529412, 0.529412, 0.694118)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
self_modulate = Color(0.529412, 0.529412, 0.529412, 0.694118)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.626
anchor_bottom = 0.634
offset_right = -241.92
offset_bottom = -144.72
grow_horizontal = 2
grow_vertical = 2
color = Color(0.686275, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(947, 524)
texture = ExtResource("2_xy6r7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -86.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
offset_right = 155.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
text = "Hold R to rotate"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 155.0
offset_bottom = 56.0
grow_horizontal = 0
grow_vertical = 0
text = "Press F to show text"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
offset_top = 60.0
offset_right = 155.0
offset_bottom = 86.0
grow_horizontal = 0
grow_vertical = 0
text = "Press Space to exit"

[node name="SubViewport" parent="." instance=ExtResource("3_6pt8o")]
own_world_3d = true
transparent_bg = true
size = Vector2i(1024, 1024)
size_2d_override = Vector2i(1024, 1024)
render_target_update_mode = 4
